fix size in programTabs.js, fix white spacing in programTabs.js

--- a/src/front/styles/programTabs.css
+++ b/src/front/styles/programTabs.css
@@ -1,10 +1,11 @@
-.tab-container{
-    border: 3px solid black;
-    border-radius: 60px/20px;
-    margin-bottom: 0.5rem;
-/*     max-height: 50%;
-    max-width: 50%; */
-    }
-.modal-letter{
-    text-align: start;
+.tab-container {
+    text-align: center;
+    justify-content: flex-start;
+    border: 4px solid black;
+    border-radius: 75px/30px;
+    width: 12rem;
+    height: 7.5rem;
+}
+.modal-letter {
+  text-align: start;
 }
